apps/prod/vitafinder/admin/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vitafinder-admin
  labels:
    app.kubernetes.io/name: vitafinder-admin
    app.kubernetes.io/part-of: vita-finder
    talay.io/environment: prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: vitafinder-admin-tls
      hosts:
        - admin.vita-pick.com
        - www.admin.vita-pick.com
  rules:
    - host: admin.vita-pick.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vitafinder-admin
                port:
                  number: 80
    - host: www.admin.vita-pick.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vitafinder-admin
                port:
                  number: 80
